@@ -1,10 +1,13 @@
 ##########################################################################################
 # Program Name	:	Website of Miscellaneous Projects
 # Author		:	DMCTruong
-# Last Updated	:	August 11, 2017
+# Last Updated	:	August 14, 2017
 # License		:	MIT
 # Description	:	A website showcasing selected projects and techinology implementations.             
 ##########################################################################################
+
+08/14/17
+- Redid the Art Gallery's Modal Preview.
 
 08/11/17
 - Updated some information on jQuery Color Picker page.
